[workspace]
#members = [ "bench_proc" ]

[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
bench_proc = { path = "bench_proc" }
bench = { path = "bench" }
solutions = { path = "solutions" }
error = { path = "error" }
itertools = "*"
num = "*"
bstr = "*"
ahash = "*"
derive_more = "*"
